--- a/standalone_gz_sim_plugins/print_entity_system_plugin/CMakeLists.txt
+++ b/standalone_gz_sim_plugins/print_entity_system_plugin/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.10.2 FATAL_ERROR)
 
 find_package(gz-cmake3 REQUIRED)
 
-project(MovelModelSystem)
+project(PrintEntitySystemPlugin)
 
 gz_find_package(gz-plugin2 REQUIRED COMPONENTS register)
 set(GZ_PLUGIN_VER ${gz-plugin2_VERSION_MAJOR})
@@ -11,9 +11,11 @@ gz_find_package(gz-sim8 REQUIRED)
 set(GZ_SIM_VER ${gz-sim8_VERSION_MAJOR})
 
 
-# MoveModel Plugin
-add_library(MoveModel SHARED MoveModel.cc)
-set_property(TARGET MoveModel PROPERTY CXX_STANDARD 17)
-target_link_libraries(MoveModel
+# PrintEntitySystemPlugin Plugin
+add_library(PrintEntitySystemPlugin SHARED PrintEntitySystemPlugin.cc)
+set_property(TARGET PrintEntitySystemPlugin PROPERTY CXX_STANDARD 17)
+target_link_libraries(PrintEntitySystemPlugin
   PUBLIC gz-plugin${GZ_PLUGIN_VER}::gz-plugin${GZ_PLUGIN_VER}
   PUBLIC gz-sim${GZ_SIM_VER}::gz-sim${GZ_SIM_VER})
+
+
