--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ standalone_gz_sim_plugins/build
 standalone_gz_sim_plugins/move_model_system_plugin/build
 standalone_gz_sim_plugins/move_model_topicway_system_plugin/build
 standalone_gz_sim_plugins/print_entity_system_plugin/build
+standalone_gz_sim_plugins/move_model_topicway_pimp_plugin/build
